[package]
name = "goguryeo_core"
version = "0.1.0"
edition = "2021"
description = "Core implementations for Goguryeo online"
authors = ["ohjinsu@codersproduct.com"]
documentation = "https://docs.rs/goguryeo_core"
repository = "https://github.com/oh-jinsu/goguryeo_core"
readme = "README.md"
keywords = []
license = "MIT"
include = ["/src", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
