[package]
name = "east_online_core"
version = "0.1.2"
edition = "2021"
description = "Core implementations for Goguryeo online"
authors = ["ohjinsu@codersproduct.com"]
documentation = "https://docs.rs/east_online_core"
repository = "https://github.com/oh-jinsu/east_online_core"
readme = "README.md"
keywords = []
license = "MIT"
include = ["/src", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
